--- a/network/chaincode/package.json
+++ b/network/chaincode/package.json
@@ -4,39 +4,36 @@
   "description": "My chaincode in NodeJS",
   "main": "dist/MyChainCode.js",
   "scripts": {
-    "build": "rm -rf dist && ./node_modules/.bin/babel src -d dist && cp -R ./src/__mocks__/*.json ./dist/__mocks__/",
+    "copyFiles": "cp -R ./src/__mocks__/*.json ./dist/__mocks__/",
+    "build": "rm -rf dist && babel src -d dist && npm run copyFiles",
     "start": "node dist/MyChainCode.js",
-    "lint": "esw --ext .js --ext .json ./src --color --fix",
+    "lint": "eslint src/**/**.js",
     "test": "jest"
   },
   "author": "Maurice Dalderup",
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "7.0.0-beta.3",
+    "@babel/polyfill": "7.0.0",
     "fabric-shim": "1.2.0",
     "jest": "23.5.0",
     "lodash": "4.17.10",
     "moment": "2.22.2",
-    "yup": "0.26.2"
+    "yup": "0.26.3"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-eslint": "8.2.6",
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "babel-eslint": "9.0.0",
     "babel-jest": "23.4.2",
-    "babel-plugin-dynamic-import-node": "2.0.0",
-    "babel-plugin-module-resolver": "3.1.1",
-    "babel-plugin-syntax-dynamic-import": "6.18.0",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-es2015-classes": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "eslint": "5.2.0",
-    "eslint-config-airbnb-base": "13.0.0",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-plugin-import": "2.13.0",
+    "eslint": "5.4.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-config-prettier": "3.0.1",
+    "eslint-plugin-import": "2.14.0",
     "eslint-plugin-node": "7.0.1",
     "eslint-plugin-prettier": "2.6.2",
     "eslint-watch": "4.0.2",
-    "prettier": "1.14.0"
+    "prettier": "1.14.2"
   }
 }
